# pleno-anonymize

./: .gitignore  .gitmodules  README.md  app.py  config.cfg  pyproject.toml
.github/workflows/: canary-release.yml  deploy-website.yml  release.yml
app/: Dockerfile  app.py  auth.py  handler.py  pyproject.toml
app/infra/: .gitignore  domain.tf  ecr.tf  lambda.tf  main.tf  outputs.tf  setup-backend.sh  variables.tf
app/infra/lambda_src/: app.py
docs/: HANDOVER.md
docs/adr/: 0001-aws-lambda-container-image.md  0002-api-url-structure.md  0003-spacy-llm-presidio.md  0004-invitely-integration.md  README.md
website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
website/public/: openapi.json
website/src/: App.tsx
website/src/auth/: AuthWrapper.tsx  authConfig.ts  useAuth.ts
website/src/components/: Footer.tsx
website/src/pages/: CallbackPage.tsx  DocsPage.tsx  HomePage.tsx  PrivacyPage.tsx  TermsPage.tsx
