[project]
name = "presidio-ja-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "openai>=1.99.6",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "spacy-llm @ file:///Users/hikae/ghq/github.com/HikaruEgashira/presidio-ja-llm/packages/spacy-llm",
    "uvicorn[standard]>=0.35.0",
]
