[project]
name = "pleno-anonymize-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "openai>=1.0.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "spacy-llm @ file:///Users/hikae/ghq/github.com/HikaruEgashira/pleno-anonymize/packages/spacy-llm",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.35.0",
]
